fixed the main news margin on tablet and desktop view

--- a/code/style.css
+++ b/code/style.css
@@ -70,8 +70,8 @@ hr {
     margin: 1%;
 }
 /* main news */
-.main-news, .main-news-img, .main-news-content {
-    width: 85%;
+.main-news-img, .main-news-content {
+    width: 80%;
     margin: auto;
     gap: 10px;
 }
@@ -136,7 +136,7 @@ a:hover {
 
 /* tablet view */
 @media (min-width: 668px) {
-    /* hidden items */
+
     .logo {
         display: none;
     }
@@ -150,7 +150,6 @@ a:hover {
         margin: auto;
         padding: 20px;
     }
-    /* revealed items */
     .desktop-view-logo {
         display: flex;
         align-self: center;
@@ -188,6 +187,7 @@ a:hover {
     .main-news {
         display: flex;
         gap: 30px;
+        margin-left: 30px;
     }
     .main-news-img {
         width: 50%;
